syntax = "proto3";

package inventory.v1;

option go_package = "github.com/DipeshC1707/BookYourShow/proto/inventory/v1;inventorypb";


service InventoryService {
  rpc LockSeats (LockSeatsRequest) returns (LockSeatsResponse);
}

message LockSeatsRequest {
  string event_id = 1;
  repeated string seat_ids = 2;
  string owner_id = 3;
}

message LockSeatsResponse {
  bool success = 1;
  string error = 2;
}
